2012-04-12

	* src/inc.c: show the detail of new messages on the trayicon tooltip.

2012-04-12

	* src/addressbook.[ch]
	  src/addr_compl.c: also use first and last name for completion.

2012-04-11

	* src/addr_compl.c: also match to the subsequent part of the name of
	  contacts (Bug #51).

2012-04-11

	* nsis/sylpheed-defs.nsh
	  nsis/sylpheed.nsi
	  nsis/english.nsh
	  nsis/japanese.nsh: abort installation if auto-uninstall was
	  cancelled or failed.
	  Added SylFilter in the installer.

2012-03-27

	* src/textview.c: don't open in-page link of HTML mail.

2012-03-26

	* libsylph/news.c: news_fetch_msg()
	  libsylph/imap.c: imap_fetch_msg(): refetch message when cache
	  file size is 0 (Bug #50).

2012-03-26

	* libsylph/defs.h: removed direct inclusion of <glibconfig.h> and
	  <glib/gwin32.h> (fixes Bug #53).

2012-03-26

	* src/menu.c: menu_button_position(): adjusted the menu position.

2012-03-26

	* src/folderview.c
	  src/summaryview.c: also support Shift+F10 for menu popup.

2012-03-26

	* src/summaryview.c: enabled menu popup with Menu key.

2012-03-26

	* src/menu.[ch]
	  src/folderview.c: enabled menu popup with Menu key.

2012-03-02

	* libsylph/imap.c: relaxed the response check of AUTHENTICATE and
	  APPEND (don't check space after '+').

2012-02-29

	* version 3.2.0beta6

2012-02-21

	* libsylph/Makefile.am
	  src/Makefile.am
	  plugin/test/Makefile.am
	  plugin/attachment_tool/Makefile.am
	  configure.in: fixed compilation error with Fink + OS X (Bug #42).
	  (moved -I$(top_srcdir)/* to the beginning of INCLUDES)

2012-02-21

	* src/prefs_filter.c: fixed a bug that filter settings are removed
	  if Escape key is pressed quickly on auto filter rule creation.
	  Also made it update filter.xml file only when the list is modified.

2012-01-20

	* libsylph/imap.c: emit "add-msg", "remove-msg", "remove-all-msg",
	  "move-folder" and "remove-folder" signals.

2012-01-20

	* libsylph/news.c
	  libsylph/nntp.[ch]: supported SOCKS proxy.

2012-01-19
