@@ -1,3 +1,9 @@
+2012-04-13
+
+	* libsylph/prefs_common.[ch]
+	  src/filesel.[ch]: preserve the last selected folders between
+	  sessions.
+
 2012-04-12
 
 	* src/inc.c: show the detail of new messages on the trayicon tooltip.
